DOCS-1011: Updates to allow indexing (but not everywhere)

--- a/netlify.toml
+++ b/netlify.toml
@@ -328,8 +328,8 @@ package = "@netlify/plugin-lighthouse"
 # Define which paths this specific [[headers]] block will cover.
 for = "/*"
 
-[headers.values]
-X-Robots-Tag = "noindex"
+#[headers.values]
+#X-Robots-Tag = "noindex"
 #X-Frame-Options = "DENY"
 #X-XSS-Protection = "1; mode=block"
 #Content-Security-Policy = "frame-ancestors https://www.facebook.com"
