DOCS-1184: Fixes for OS helm chart links (#215)

--- a/netlify.toml
+++ b/netlify.toml
@@ -129,6 +129,13 @@ package = "@netlify/plugin-lighthouse"
 #status = 200
 
 # Redirects for old Calico Open Source docs
+# proxy redirect for Helm chart repo
+
+[[redirects]]
+   from = "/calico/charts/*"
+   to = "https://calico-public.s3.amazonaws.com/charts/:splat"
+   status = 200
+   headers = {X-From = "Netlify"}
 
 # proxy redirects for website and manifests for v3.24
 [[redirects]]
