DOCS-1202: Confines Algolia crawlers to Docusaurus-native doc sets

--- a/algolia-crawler-config.json
+++ b/algolia-crawler-config.json
@@ -1,6 +1,6 @@
 {
   "index_name": "calico",
-  "start_urls": ["https://unified-docs.tigera.io"],
+  "start_urls": ["https://unified-docs.tigera.io/calico", "https://unified-docs.tigera.io/calico-enterprise", "https://unified-docs.tigera.io/calico-cloud"],
   "stop_urls": [],
   "selectors": {
     "lvl0": {
