--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@testing-library/react": "^12.1.5",
     "docusaurus-plugin-sass": "^0.2.2",
     "jest": "^29.0.2",
+    "link-check": "^5.2.0",
     "sass": "^1.54.2",
     "ts-jest": "^29.0.3"
   },
