--- a/netlify.toml
+++ b/netlify.toml
@@ -15,7 +15,7 @@
 publish = "build/"
 
 # Default build command.
-command = "CI=false make build"
+command = "make clean && make build"
 
 [[plugins]]
 # Installs the Lighthouse Build Plugin for all deploy contexts
