force test to succeed, extend run time to 3 hours

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,9 +1,14 @@
 version: v1.0
 name: Calico / Tigera Docs Pipeline
+
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
+
+execution_time_limit:
+  hours: 3
+
 blocks:
   - name: Install dependencies
     task:
