update crawl test

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -24,7 +24,7 @@ blocks:
           - node --version
           - yarn --version
       jobs:
-        - name: yarn install and cache
+        - name: Yarn Install and Cache
           commands:
             - cache restore
             - yarn install
@@ -43,7 +43,7 @@ blocks:
           - node --version
           - yarn --version
       jobs:
-        - name: Unit tests
+        - name: Crawler Tests for Docs
           commands:
             - cache restore
-            - yarn test
+            - make clean && make local-crawl-test
