--- a/netlify.toml
+++ b/netlify.toml
@@ -137,6 +137,11 @@ package = "@netlify/plugin-lighthouse"
    status = 200
    headers = {X-From = "Netlify"}
 
+[[redirects]]
+  from = "/archive/v3.25/*"
+  to = "https://calico-v3-25.netlify.app/archive/v3.25/:splat"
+  status = 200
+
 # proxy redirects for website and manifests for v3.24
 [[redirects]]
   from = "/archive/v3.24/*"
