--- a/netlify.toml
+++ b/netlify.toml
@@ -256,6 +256,11 @@
   status = 301
 
 [[redirects]]
+  from = "/chris/docs-branches"
+  to = "https://github.com/ctauchen/docs/branches"
+  status = 301
+
+[[redirects]]
   from = "/*"
   to = "https://docs.tigera.io/calico/:splat"
   force = true
