updated crawler and tests, update build to not do link-checking

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -36,6 +36,8 @@ blocks:
           value: test
         - name: CI
           value: 'true'
+        - name: EXTENDED_CRAWL
+          value: 'true'
       prologue:
         commands:
           - checkout
@@ -46,4 +48,4 @@ blocks:
         - name: Crawler Tests for Docs
           commands:
             - cache restore
-            - make clean && make local-crawl-test
+            - make clean && make build && make test
