--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@docusaurus/module-type-aliases": "^2.3.1",
     "@playwright/test": "^1.30.0",
     "@testing-library/react": "^12.1.5",
+    "axios": "^1.3.3",
     "crawlee": "^3.1.4",
     "docusaurus-plugin-sass": "^0.2.2",
     "jest": "^29.0.2",
