fix logging by adding a custom playwright reporter

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -36,8 +36,8 @@ blocks:
           value: test
         - name: CI
           value: 'true'
-        - name: EXTENDED_CRAWL
-          value: 'true'
+        - name: DEEP_CRAWL
+          value: 'false'
       prologue:
         commands:
           - checkout
