--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "crawlee": "^3.1.4",
     "docusaurus-plugin-sass": "^0.2.2",
     "jest": "^29.0.2",
-    "link-check": "^5.2.0",
+    "needle": "^3.2.0",
     "playwright": "^1.30.0",
     "sass": "^1.54.2"
   },
