Testing headers for proxy sites

--- a/netlify.toml
+++ b/netlify.toml
@@ -141,6 +141,7 @@ package = "@netlify/plugin-lighthouse"
   from = "/archive/v3.25/*"
   to = "https://calico-v3-25.netlify.app/archive/v3.25/:splat"
   status = 200
+  headers = {X-ROBOTS = noindex, nofollow}
 
 # proxy redirects for website and manifests for v3.24
 [[redirects]]
