attach netlify secrets to sem

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -31,6 +31,8 @@ blocks:
             - cache store
   - name: Update Search Index
     task:
+      secrets:
+        - name: netlify-docsearch-scraper-creds
       env_vars:
         - name: CI
           value: 'true'
