--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "playwright test",
     "git-clean": "git restore --staged . && git clean -f .",
     "dir-clean": "rm -rf ./calico ./calico-enterprise ./calico-cloud ./docs/calico ./docs/calico-enterprise ./docs/calico-cloud ./src/data ./static/img/calico ./static/img/calico-enterprise ./static/img/calico-cloud ./static/json/calico-api-swagger.json ./calico_versions.json ./calico-enterprise_versions.json ./calico-cloud_versions.json && find . -regex '.*_versioned_docs/version-.*' -delete",
-    "cut": "cut-new-version.sh"
+    "cut": "scripts/cut-new-version.sh"
   },
   "dependencies": {
     "@algolia/client-search": "^4.14.3",
