--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "test": "playwright test",
+    "test": "playwright test --grep-invert=@archive",
     "git-clean": "git restore --staged . && git clean -f .",
     "dir-clean": "rm -rf ./calico ./calico-enterprise ./calico-cloud ./docs/calico ./docs/calico-enterprise ./docs/calico-cloud ./src/data ./static/img/calico ./static/img/calico-enterprise ./static/img/calico-cloud ./static/json/calico-api-swagger.json ./calico_versions.json ./calico-enterprise_versions.json ./calico-cloud_versions.json && find . -regex '.*_versioned_docs/version-.*' -delete",
     "cut": "scripts/cut-new-version.sh"
