--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.3.3",
     "crawlee": "^3.1.4",
     "docusaurus-plugin-sass": "^0.2.2",
+    "html-entities": "^2.3.3",
     "jest": "^29.0.2",
     "limiter": "^2.1.0",
     "needle": "^3.2.0",
