--- a/calico-enterprise/releases.json
+++ b/calico-enterprise/releases.json
@@ -1,9 +1,9 @@
 [
   {
-    "title": "master",
+    "title": "3.17",
     "tigera-operator": {
       "image": "tigera/operator",
-      "version": "master",
+      "version": "3.17",
       "registry": "quay.io"
     },
     "calico": {
@@ -13,236 +13,236 @@
     "components": {
       "cnx-manager": {
         "image": "tigera/cnx-manager",
-        "version": "master"
+        "version": "3.17"
       },
       "voltron": {
         "image": "tigera/voltron",
-        "version": "master"
+        "version": "3.17"
       },
       "guardian": {
         "image": "tigera/guardian",
-        "version": "master"
+        "version": "3.17"
       },
       "cnx-apiserver": {
         "image": "tigera/cnx-apiserver",
-        "version": "master"
+        "version": "3.17"
       },
       "cnx-queryserver": {
         "image": "tigera/cnx-queryserver",
-        "version": "master"
+        "version": "3.17"
       },
       "cnx-kube-controllers": {
         "image": "tigera/kube-controllers",
-        "version": "master"
+        "version": "3.17"
       },
       "calicoq": {
         "image": "tigera/calicoq",
-        "version": "master"
+        "version": "3.17r"
       },
       "typha": {
         "image": "tigera/typha",
-        "version": "master"
+        "version": "3.17"
       },
       "calicoctl": {
         "image": "tigera/calicoctl",
-        "version": "master"
+        "version": "3.17"
       },
       "cnx-node": {
         "image": "tigera/cnx-node",
-        "version": "master"
+        "version": "3.17"
       },
       "dikastes": {
         "image": "tigera/dikastes",
-        "version": "master"
+        "version": "3.17"
       },
       "dex": {
         "image": "tigera/dex",
-        "version": "master"
+        "version": "3.17"
       },
       "fluentd": {
         "image": "tigera/fluentd",
-        "version": "master"
+        "version": "3.17"
       },
       "fluentd-windows": {
         "image": "tigera/fluentd-windows",
-        "version": "master"
+        "version": "3.17"
       },
       "es-proxy": {
         "image": "tigera/es-proxy",
-        "version": "master"
+        "version": "3.17"
       },
       "eck-kibana": {
         "version": "7.17.9"
       },
       "kibana": {
         "image": "tigera/kibana",
-        "version": "master"
+        "version": "3.17"
       },
       "eck-elasticsearch": {
         "version": "7.17.9"
       },
       "elasticsearch": {
         "image": "tigera/elasticsearch",
-        "version": "master"
+        "version": "3.17"
       },
       "cloud-controllers": {
         "image": "tigera/cloud-controllers",
-        "version": "master"
+        "version": "3.17"
       },
       "elastic-tsee-installer": {
         "image": "tigera/intrusion-detection-job-installer",
-        "version": "master"
+        "version": "3.17"
       },
       "es-curator": {
         "image": "tigera/es-curator",
-        "version": "master"
+        "version": "3.17"
       },
       "intrusion-detection-controller": {
         "image": "tigera/intrusion-detection-controller",
-        "version": "master"
+        "version": "3.17"
       },
       "compliance-controller": {
         "image": "tigera/compliance-controller",
-        "version": "master"
+        "version": "3.17"
       },
       "compliance-reporter": {
         "image": "tigera/compliance-reporter",
-        "version": "master"
+        "version": "3.17"
       },
       "compliance-snapshotter": {
         "image": "tigera/compliance-snapshotter",
-        "version": "master"
+        "version": "3.17"
       },
       "compliance-server": {
         "image": "tigera/compliance-server",
-        "version": "master"
+        "version": "3.17"
       },
       "compliance-benchmarker": {
         "image": "tigera/compliance-benchmarker",
-        "version": "master"
+        "version": "3.17"
       },
       "ingress-collector": {
         "image": "tigera/ingress-collector",
-        "version": "master"
+        "version": "3.17"
       },
       "l7-collector": {
         "image": "tigera/l7-collector",
-        "version": "master"
+        "version": "3.17"
       },
       "license-agent": {
         "image": "tigera/license-agent",
-        "version": "master"
+        "version": "3.17"
       },
       "tigera-cni": {
         "image": "tigera/cni",
-        "version": "master"
+        "version": "3.17"
       },
       "firewall-integration": {
         "image": "tigera/firewall-integration",
-        "version": "master"
+        "version": "3.17"
       },
       "egress-gateway": {
         "image": "tigera/egress-gateway",
-        "version": "master"
+        "version": "3.17"
       },
       "honeypod": {
         "image": "tigera/honeypod",
-        "version": "master"
+        "version": "3.17r"
       },
       "honeypod-exp-service": {
         "image": "tigera/honeypod-exp-service",
-        "version": "master"
+        "version": "3.17"
       },
       "honeypod-controller": {
         "image": "tigera/honeypod-controller",
-        "version": "master"
+        "version": "3.17"
       },
       "key-cert-provisioner": {
         "image": "tigera/key-cert-provisioner",
-        "version": "master",
+        "version": "3.17",
         "registry": "quay.io"
       },
       "anomaly_detection_jobs": {
         "image": "tigera/anomaly_detection_jobs",
-        "version": "master"
+        "version": "3.17"
       },
       "anomaly-detection-api": {
         "image": "tigera/anomaly-detection-api",
-        "version": "master"
+        "version": "3.17"
       },
       "elasticsearch-metrics": {
         "image": "tigera/elasticsearch-metrics",
-        "version": "master"
+        "version": "3.17"
       },
       "packetcapture": {
         "image": "tigera/packetcapture",
-        "version": "master"
+        "version": "3.17"
       },
       "prometheus": {
         "image": "tigera/prometheus",
-        "version": "master"
+        "version": "3.17"
       },
       "coreos-prometheus": {
         "version": "v2.42.0"
       },
       "prometheus-operator": {
         "image": "tigera/prometheus-operator",
-        "version": "master"
+        "version": "3.17"
       },
       "prometheus-config-reloader": {
         "image": "tigera/prometheus-config-reloader",
-        "version": "master"
+        "version": "3.17"
       },
       "tigera-prometheus-service": {
         "image": "tigera/prometheus-service",
-        "version": "master"
+        "version": "3.17"
       },
       "es-gateway": {
         "image": "tigera/es-gateway",
-        "version": "master"
+        "version": "3.17"
       },
       "deep-packet-inspection": {
         "image": "tigera/deep-packet-inspection",
-        "version": "master"
+        "version": "3.17"
       },
       "eck-elasticsearch-operator": {
         "version": "2.6.1"
       },
       "elasticsearch-operator": {
         "image": "tigera/eck-operator",
-        "version": "master"
+        "version": "3.17"
       },
       "coreos-alertmanager": {
         "version": "v0.25.0"
       },
       "alertmanager": {
         "image": "tigera/alertmanager",
-        "version": "master"
+        "version": "3.17"
       },
       "envoy": {
         "image": "tigera/envoy",
-        "version": "master"
+        "version": "3.17"
       },
       "envoy-init": {
         "image": "tigera/envoy-init",
-        "version": "master"
+        "version": "3.17"
       },
       "windows": {
         "image": "tigera/calico-windows",
-        "version": "master"
+        "version": "3.17"
       },
       "windows-upgrade": {
         "image": "tigera/calico-windows-upgrade",
-        "version": "master"
+        "version": "3.17"
       },
       "flexvol": {
         "image": "calico/pod2daemon-flexvol",
-        "version": "master",
+        "version": "3.17",
         "registry": "quay.io"
       },
       "csi-driver": {
         "image": "calico/csi",
-        "version": "master",
+        "version": "3.17",
         "registry": "quay.io"
       },
       "csi-node-driver-registrar": {
