implement fail on test errors on in prod

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,6 @@
 # all contexts unless otherwise overridden by more specific contexts.
 [build]
 publish = "build/"
-# Default build command.
 command = "make clean && make build && make test"
 
 [[plugins]]
@@ -14,7 +13,9 @@ package = "@netlify/plugin-lighthouse"
 # these settings. You can define environment variables
 # here but we recommend using the Netlify UI for sensitive
 # values to keep them out of your source repository.
-#[context.production]
+[context.production]
+environment = { FAIL_ON_TEST_ERROR = "true" }
+
 #publish = "output/"
 #command = "make publish"
 #environment = { NODE_VERSION = "14.15.3" }
@@ -22,7 +23,6 @@ package = "@netlify/plugin-lighthouse"
 # Deploy Preview context: all deploys generated from
 # a pull/merge request will inherit these settings.
 #[context.deploy-preview]
-#publish = "dist/"
 
 # Here is an example of how to define context-specific
 # environment variables. Be mindful when using this
