use Makefile for ignoring test failures for PRs - must pass for prod

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 # all contexts unless otherwise overridden by more specific contexts.
 [build]
 publish = "build/"
-command = "make clean && make build && make test"
+command = "make all"
 
 [[plugins]]
 # Installs the Lighthouse Build Plugin for all deploy contexts
@@ -14,7 +14,7 @@ package = "@netlify/plugin-lighthouse"
 # here but we recommend using the Netlify UI for sensitive
 # values to keep them out of your source repository.
 [context.production]
-environment = { FAIL_ON_TEST_ERROR = "true" }
+command = "make prod"
 
 #publish = "output/"
 #command = "make publish"
