Docs changes to use kubectl/calicoctl for kdd,etcd mode

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,9 @@
 # all contexts unless otherwise overridden by more specific contexts.
 [build]
 publish = "build/"
-command = "make all"
+
+# Default build command.
+command = "make clean && make build"
 
 [[plugins]]
 # Installs the Lighthouse Build Plugin for all deploy contexts
