--- a/calico_versioned_docs/version-3.26/releases.json
+++ b/calico_versioned_docs/version-3.26/releases.json
@@ -1,6 +1,6 @@
 [
   {
-    "title": "master",
+    "title": "v3.26.1",
     "tigera-operator": {
       "image": "tigera/operator",
       "registry": "quay.io",
@@ -8,7 +8,59 @@
     },
     "components": {
       "typha": {
+        "version": "pickle"
+      },
+      "calicoctl": {
         "version": "master"
+      },
+      "calico/node": {
+        "version": "master"
+      },
+      "calico/cni": {
+        "version": "master"
+      },
+      "calico/apiserver": {
+        "version": "master"
+      },
+      "calico/kube-controllers": {
+        "version": "master"
+      },
+      "calico/flannel-migration-controller": {
+        "version": "master"
+      },
+      "calico/windows": {
+        "version": "master"
+      },
+      "networking-calico": {
+        "version": "master"
+      },
+      "flannel": {
+        "version": "v0.16.3"
+      },
+      "calico/dikastes": {
+        "version": "master"
+      },
+      "flexvol": {
+        "version": "master"
+      },
+      "csi-driver": {
+        "version": "master"
+      },
+      "csi-node-driver-registrar": {
+        "version": "master"
+      }
+    }
+  },
+  {
+    "title": "v3.26.0",
+    "tigera-operator": {
+      "image": "tigera/operator",
+      "registry": "quay.io",
+      "version": "master"
+    },
+    "components": {
+      "typha": {
+        "version": "pickle"
       },
       "calicoctl": {
         "version": "master"
