[DOCS-1290] Update CalicoEnterprise docs to include the addition of Linseed

--- a/calico-enterprise/releases.json
+++ b/calico-enterprise/releases.json
@@ -133,6 +133,10 @@
         "image": "tigera/license-agent",
         "version": "master"
       },
+      "linseed": {
+        "image": "tigera/linseed",
+        "version": "master"
+      },
       "tigera-cni": {
         "image": "tigera/cni",
         "version": "master"
