--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "limiter": "^2.1.0",
     "needle": "^3.2.0",
     "playwright": "^1.30.0",
-    "sass": "^1.54.2"
+    "sass": "^1.54.2",
+    "yaml": "^2.2.1"
   },
   "browserslist": {
     "production": [
