--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "test": "playwright test --grep-invert=@archive",
+    "unittest": "jest --coverage",
     "git-clean": "git restore --staged . && git clean -f .",
     "dir-clean": "rm -rf ./calico ./calico-enterprise ./calico-cloud ./docs/calico ./docs/calico-enterprise ./docs/calico-cloud ./src/data ./static/img/calico ./static/img/calico-enterprise ./static/img/calico-cloud ./static/json/calico-api-swagger.json ./calico_versions.json ./calico-enterprise_versions.json ./calico-cloud_versions.json && find . -regex '.*_versioned_docs/version-.*' -delete",
     "cut": "scripts/cut-new-version.sh"
   },
   "dependencies": {
     "@algolia/client-search": "^4.14.3",
+    "@chakra-ui/icons": "1.1.1",
+    "@chakra-ui/react": "1.6.10",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@docusaurus/core": "^2.4.0",
     "@docusaurus/preset-classic": "^2.4.0",
     "@jest/globals": "^29.4.1",
     "@mdx-js/react": "^1.6.22",
     "@types/react": "^18.0.27",
     "clsx": "^1.2.1",
+    "framer-motion": "^4.1.17",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -40,16 +46,26 @@
     "@docusaurus/module-type-aliases": "^2.4.0",
     "@playwright/test": "^1.30.0",
     "@testing-library/react": "^12.1.5",
+    "@types/jest": "^29.5.0",
     "axios": "^1.3.3",
     "crawlee": "^3.1.4",
     "docusaurus-plugin-sass": "^0.2.2",
     "html-entities": "^2.3.3",
-    "jest": "^29.0.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-junit": "^15.0.0",
     "limiter": "^2.1.0",
     "needle": "^3.2.0",
     "playwright": "^1.30.0",
     "sass": "^1.54.2",
-    "yaml": "^2.2.2"
+    "yaml": "^2.2.2",
+    "ts-jest": "^29.1.0",
+    "typescript": "^4.4.0"
+
+  },
+  "jest-junit": {
+    "outputDirectory": "./coverage",
+    "outputName": "junit.xml"
   },
   "browserslist": {
     "production": [
