Cloud: Add make target to update private image list
- This also includes CI to ensure that if the image list is not updated
  the PR will fail CI

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -68,3 +68,7 @@ blocks:
           commands:
             - cache restore
             - make clean && make build && make test
+        - name: Calico cloud update test
+          commands:
+            - cache restore
+            - make clean && make ci-cloud-image-list
