Fix operator reference build tooling to support multiple versions
The Makefile build-operator-reference should work to build the reference
doc for the different versions and different products.
This change also includes rebuilding the versions that could be updated.

--- a/calico-cloud/releases.json
+++ b/calico-cloud/releases.json
@@ -1,486 +1,257 @@
 [
   {
-    "title": "v3.14.1",
+    "title": "master",
     "tigera-operator": {
       "image": "tigera/operator",
-      "version": "v1.27.11",
+      "version": "master",
       "registry": "quay.io"
     },
     "calico": {
-      "minor_version": "v3.23",
+      "minor_version": "v3.24",
       "archive_path": "archive"
     },
     "components": {
       "cnx-manager": {
         "image": "tigera/cnx-manager",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "voltron": {
         "image": "tigera/voltron",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "guardian": {
         "image": "tigera/guardian",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "cnx-apiserver": {
         "image": "tigera/cnx-apiserver",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "cnx-queryserver": {
         "image": "tigera/cnx-queryserver",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "cnx-kube-controllers": {
         "image": "tigera/kube-controllers",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "calicoq": {
         "image": "tigera/calicoq",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "typha": {
         "image": "tigera/typha",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "calicoctl": {
         "image": "tigera/calicoctl",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "cnx-node": {
         "image": "tigera/cnx-node",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "dikastes": {
         "image": "tigera/dikastes",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "dex": {
         "image": "tigera/dex",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "fluentd": {
         "image": "tigera/fluentd",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "fluentd-windows": {
         "image": "tigera/fluentd-windows",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "es-proxy": {
         "image": "tigera/es-proxy",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "eck-kibana": {
-        "version": "7.16.2"
+        "version": "7.17.9"
       },
       "kibana": {
         "image": "tigera/kibana",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "eck-elasticsearch": {
-        "version": "7.16.2"
+        "version": "7.17.9"
       },
       "elasticsearch": {
         "image": "tigera/elasticsearch",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "cloud-controllers": {
         "image": "tigera/cloud-controllers",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "elastic-tsee-installer": {
         "image": "tigera/intrusion-detection-job-installer",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "es-curator": {
         "image": "tigera/es-curator",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "intrusion-detection-controller": {
         "image": "tigera/intrusion-detection-controller",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "compliance-controller": {
         "image": "tigera/compliance-controller",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "compliance-reporter": {
         "image": "tigera/compliance-reporter",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "compliance-snapshotter": {
         "image": "tigera/compliance-snapshotter",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "compliance-server": {
         "image": "tigera/compliance-server",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "compliance-benchmarker": {
         "image": "tigera/compliance-benchmarker",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "ingress-collector": {
         "image": "tigera/ingress-collector",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "l7-collector": {
         "image": "tigera/l7-collector",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "license-agent": {
         "image": "tigera/license-agent",
-        "version": "v3.14.1"
+        "version": "master"
+      },
+      "linseed": {
+        "image": "tigera/linseed",
+        "version": "master"
       },
       "tigera-cni": {
         "image": "tigera/cni",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "firewall-integration": {
         "image": "tigera/firewall-integration",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "egress-gateway": {
         "image": "tigera/egress-gateway",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "honeypod": {
         "image": "tigera/honeypod",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "honeypod-exp-service": {
         "image": "tigera/honeypod-exp-service",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "honeypod-controller": {
         "image": "tigera/honeypod-controller",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "key-cert-provisioner": {
         "image": "tigera/key-cert-provisioner",
-        "version": "v1.1.3",
+        "version": "master",
         "registry": "quay.io"
       },
       "anomaly_detection_jobs": {
         "image": "tigera/anomaly_detection_jobs",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "anomaly-detection-api": {
         "image": "tigera/anomaly-detection-api",
-        "version": "v3.14.1"
+        "version": "master"
       },
       "elasticsearch-metrics": {
         "image": "tigera/elasticsearch-metrics",
-        "version": "v3.14.1"
+        "version": "master"
       },
-      "packetcapture-api": {
-        "image": "tigera/packetcapture-api",
-        "version": "v3.14.1"
-      },
-      "prometheus": {
-        "image": "tigera/prometheus",
-        "version": "v3.14.1"
-      },
-      "coreos-prometheus": {
-        "version": "v2.32.0"
-      },
-      "prometheus-operator": {
-        "image": "tigera/prometheus-operator",
-        "version": "v3.14.1"
-      },
-      "prometheus-config-reloader": {
-        "image": "tigera/prometheus-config-reloader",
-        "version": "v3.14.1"
-      },
-      "tigera-prometheus-service": {
-        "image": "tigera/prometheus-service",
-        "version": "v3.14.1"
-      },
-      "es-gateway": {
-        "image": "tigera/es-gateway",
-        "version": "v3.14.1"
-      },
-      "deep-packet-inspection": {
-        "image": "tigera/deep-packet-inspection",
-        "version": "v3.14.1"
-      },
-      "eck-elasticsearch-operator": {
-        "version": "1.8.0"
-      },
-      "elasticsearch-operator": {
-        "image": "tigera/eck-operator",
-        "version": "v3.14.1"
-      },
-      "coreos-alertmanager": {
-        "version": "v0.23.0"
-      },
-      "alertmanager": {
-        "image": "tigera/alertmanager",
-        "version": "v3.14.1"
-      },
-      "envoy": {
-        "image": "tigera/envoy",
-        "version": "v3.14.1"
-      },
-      "envoy-init": {
-        "image": "tigera/envoy-init",
-        "version": "v3.14.1"
-      },
-      "windows": {
-        "image": "tigera/calico-windows",
-        "version": "v3.14.1"
-      },
-      "windows-upgrade": {
-        "image": "tigera/calico-windows-upgrade",
-        "version": "v3.14.1"
-      },
-      "flexvol": {
-        "image": "calico/pod2daemon-flexvol",
-        "version": "v3.23.1",
-        "registry": "quay.io"
-      }
-    }
-  },
-  {
-    "title": "v3.14.0-4",
-    "tigera-operator": {
-      "image": "tigera/operator",
-      "version": "v1.27.10",
-      "registry": "quay.io"
-    },
-    "calico": {
-      "minor_version": "v3.23",
-      "archive_path": "archive"
-    },
-    "components": {
-      "cnx-manager": {
-        "image": "tigera/cnx-manager",
-        "version": "v3.14.0-4"
-      },
-      "voltron": {
-        "image": "tigera/voltron",
-        "version": "v3.14.0-4"
-      },
-      "guardian": {
-        "image": "tigera/guardian",
-        "version": "v3.14.0-4"
-      },
-      "cnx-apiserver": {
-        "image": "tigera/cnx-apiserver",
-        "version": "v3.14.0-4"
-      },
-      "cnx-queryserver": {
-        "image": "tigera/cnx-queryserver",
-        "version": "v3.14.0-4"
-      },
-      "cnx-kube-controllers": {
-        "image": "tigera/kube-controllers",
-        "version": "v3.14.0-4"
-      },
-      "calicoq": {
-        "image": "tigera/calicoq",
-        "version": "v3.14.0-4"
-      },
-      "typha": {
-        "image": "tigera/typha",
-        "version": "v3.14.0-4"
-      },
-      "calicoctl": {
-        "image": "tigera/calicoctl",
-        "version": "v3.14.0-4"
-      },
-      "cnx-node": {
-        "image": "tigera/cnx-node",
-        "version": "v3.14.0-4"
-      },
-      "dikastes": {
-        "image": "tigera/dikastes",
-        "version": "v3.14.0-4"
-      },
-      "dex": {
-        "image": "tigera/dex",
-        "version": "v3.14.0-4"
-      },
-      "fluentd": {
-        "image": "tigera/fluentd",
-        "version": "v3.14.0-4"
-      },
-      "fluentd-windows": {
-        "image": "tigera/fluentd-windows",
-        "version": "v3.14.0-4"
-      },
-      "es-proxy": {
-        "image": "tigera/es-proxy",
-        "version": "v3.14.0-4"
-      },
-      "eck-kibana": {
-        "version": "7.16.2"
-      },
-      "kibana": {
-        "image": "tigera/kibana",
-        "version": "v3.14.0-4"
-      },
-      "eck-elasticsearch": {
-        "version": "7.16.2"
-      },
-      "elasticsearch": {
-        "image": "tigera/elasticsearch",
-        "version": "v3.14.0-4"
-      },
-      "cloud-controllers": {
-        "image": "tigera/cloud-controllers",
-        "version": "v3.14.0-4"
-      },
-      "elastic-tsee-installer": {
-        "image": "tigera/intrusion-detection-job-installer",
-        "version": "v3.14.0-4"
-      },
-      "es-curator": {
-        "image": "tigera/es-curator",
-        "version": "v3.14.0-4"
-      },
-      "intrusion-detection-controller": {
-        "image": "tigera/intrusion-detection-controller",
-        "version": "v3.14.0-4"
-      },
-      "compliance-controller": {
-        "image": "tigera/compliance-controller",
-        "version": "v3.14.0-4"
-      },
-      "compliance-reporter": {
-        "image": "tigera/compliance-reporter",
-        "version": "v3.14.0-4"
-      },
-      "compliance-snapshotter": {
-        "image": "tigera/compliance-snapshotter",
-        "version": "v3.14.0-4"
-      },
-      "compliance-server": {
-        "image": "tigera/compliance-server",
-        "version": "v3.14.0-4"
-      },
-      "compliance-benchmarker": {
-        "image": "tigera/compliance-benchmarker",
-        "version": "v3.14.0-4"
-      },
-      "ingress-collector": {
-        "image": "tigera/ingress-collector",
-        "version": "v3.14.0-4"
-      },
-      "l7-collector": {
-        "image": "tigera/l7-collector",
-        "version": "v3.14.0-4"
-      },
-      "license-agent": {
-        "image": "tigera/license-agent",
-        "version": "v3.14.0-4"
-      },
-      "tigera-cni": {
-        "image": "tigera/cni",
-        "version": "v3.14.0-4"
-      },
-      "firewall-integration": {
-        "image": "tigera/firewall-integration",
-        "version": "v3.14.0-4"
-      },
-      "egress-gateway": {
-        "image": "tigera/egress-gateway",
-        "version": "v3.14.0-4"
-      },
-      "honeypod": {
-        "image": "tigera/honeypod",
-        "version": "v3.14.0-4"
-      },
-      "honeypod-exp-service": {
-        "image": "tigera/honeypod-exp-service",
-        "version": "v3.14.0-4"
-      },
-      "honeypod-controller": {
-        "image": "tigera/honeypod-controller",
-        "version": "v3.14.0-4"
-      },
-      "key-cert-provisioner": {
-        "image": "tigera/key-cert-provisioner",
-        "version": "v1.1.3",
-        "registry": "quay.io"
-      },
-      "anomaly_detection_jobs": {
-        "image": "tigera/anomaly_detection_jobs",
-        "version": "v3.14.0-4"
-      },
-      "anomaly-detection-api": {
-        "image": "tigera/anomaly-detection-api",
-        "version": "v3.14.0-4"
-      },
-      "elasticsearch-metrics": {
-        "image": "tigera/elasticsearch-metrics",
-        "version": "v3.14.0-4"
-      },
-      "packetcapture-api": {
-        "image": "tigera/packetcapture-api",
-        "version": "v3.14.0-4"
+      "packetcapture": {
+        "image": "tigera/packetcapture",
+        "version": "master"
       },
       "prometheus": {
         "image": "tigera/prometheus",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "coreos-prometheus": {
-        "version": "v2.32.0"
+        "version": "v2.42.0"
       },
       "prometheus-operator": {
         "image": "tigera/prometheus-operator",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "prometheus-config-reloader": {
         "image": "tigera/prometheus-config-reloader",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "tigera-prometheus-service": {
         "image": "tigera/prometheus-service",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "es-gateway": {
         "image": "tigera/es-gateway",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "deep-packet-inspection": {
         "image": "tigera/deep-packet-inspection",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "eck-elasticsearch-operator": {
-        "version": "1.8.0"
+        "version": "2.6.1"
       },
       "elasticsearch-operator": {
         "image": "tigera/eck-operator",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "coreos-alertmanager": {
-        "version": "v0.23.0"
+        "version": "v0.25.0"
       },
       "alertmanager": {
         "image": "tigera/alertmanager",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "envoy": {
         "image": "tigera/envoy",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "envoy-init": {
         "image": "tigera/envoy-init",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "windows": {
         "image": "tigera/calico-windows",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "windows-upgrade": {
         "image": "tigera/calico-windows-upgrade",
-        "version": "v3.14.0-4"
+        "version": "master"
       },
       "flexvol": {
         "image": "calico/pod2daemon-flexvol",
-        "version": "v3.23.1",
+        "version": "master",
+        "registry": "quay.io"
+      },
+      "csi-driver": {
+        "image": "calico/csi",
+        "version": "master",
+        "registry": "quay.io"
+      },
+      "csi-node-driver-registrar": {
+        "image": "calico/node-driver-registrar",
+        "version": "master",
         "registry": "quay.io"
       }
     }
