remove makefile target 'prod', use 'all' target for everything and fail if any tests fail

--- a/netlify.toml
+++ b/netlify.toml
@@ -16,7 +16,7 @@ package = "@netlify/plugin-lighthouse"
 # here but we recommend using the Netlify UI for sensitive
 # values to keep them out of your source repository.
 [context.production]
-command = "make prod"
+#command = "make all"
 
 #publish = "output/"
 #command = "make publish"
