--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@algolia/client-search": "^4.14.3",
     "@chakra-ui/icons": "1.1.1",
     "@chakra-ui/react": "1.6.10",
+    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/preset-classic": "^2.4.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@docusaurus/core": "^2.4.0",
-    "@docusaurus/preset-classic": "^2.4.0",
     "@jest/globals": "^29.4.1",
     "@mdx-js/react": "^1.6.22",
     "@types/react": "^18.0.27",
@@ -45,7 +45,7 @@
     "webpack": "^5.76.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.0",
+    "@docusaurus/module-type-aliases": "^2.4.1",
     "@playwright/test": "^1.30.0",
     "@testing-library/react": "^12.1.5",
     "@types/jest": "^29.5.0",
@@ -60,10 +60,9 @@
     "needle": "^3.2.0",
     "playwright": "^1.30.0",
     "sass": "^1.54.2",
-    "yaml": "^2.2.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.4.0"
-
+    "typescript": "^4.4.0",
+    "yaml": "^2.2.2"
   },
   "jest-junit": {
     "outputDirectory": "./coverage",
