--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 publish = "build/"
 
 # Default build command.
-command = "make all"
+command = "yarn build"
 
 [[plugins]]
 # Installs the Lighthouse Build Plugin for all deploy contexts
