[EV-3801] Change calico.org to projectcalico.org

--- a/static/files/policy-recommendation/policy-recommendation-deployments.yaml
+++ b/static/files/policy-recommendation/policy-recommendation-deployments.yaml
@@ -157,7 +157,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-calico-org
+  name: curl-projectcalico-org
   namespace: public-domain-curl
 spec:
   replicas: 1
@@ -173,7 +173,7 @@ spec:
       - image: curlimages/curl
         name: curl
         command: ["sh"]
-        args: ["-c", "while true; do curl http://www.calico.org:80; sleep 5;done"]
+        args: ["-c", "while true; do curl http://www.projectcalico.org:80; sleep 5;done"]
         securityContext:
           runAsGroup: 0
           runAsNonRoot: false
