[EV-3801] Update deployments

--- a/static/files/policy-recommendation/policy-recommendation-deployments.yaml
+++ b/static/files/policy-recommendation/policy-recommendation-deployments.yaml
@@ -1,50 +1,30 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: public-domain-curl
+  name: curl-ns
 
 ---
 
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: service-1
+  name: service-ns
 
 ---
 
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: service-curl
+  name: service-curl-ns
 
 ---
 
+# Generates traffic from 'service-ns' to the nginx-svc service, in the 'curl-ns' namespace.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
-  namespace: service-1
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - image: docker.io/library/nginx:latest
-        name: nginx
-
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: curl
-  namespace: public-domain-curl
+  name: curl-service
+  namespace: service-ns
 spec:
   replicas: 2
   selector:
@@ -59,7 +39,7 @@ spec:
       - image: curlimages/curl
         name: curl
         command: ["sh"]
-        args: ["-c", "while true; do curl http://www.tigera.io:8080; sleep 5;done"]
+        args: ["-c", "while true; do curl http://nginx-svc.curl-ns.svc.cluster.local:80; sleep 5;done"]
         securityContext:
           runAsGroup: 0
           runAsNonRoot: false
@@ -68,13 +48,14 @@ spec:
 
 ---
 
+# Generates traffic from 'curl-ns' to the nginx-svc service, in the 'service-ns' namespace.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl
-  namespace: service-curl
+  name: curl-service
+  namespace: curl-ns
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: curl
@@ -87,21 +68,79 @@ spec:
       - image: curlimages/curl
         name: curl
         command: ["sh"]
-        args: ["-c", "while true; do curl http://nginx-svc.service-1-namespace.svc:81; sleep 5;done"]
+        args: ["-c", "while true; do curl http://nginx-svc.service-ns.svc.cluster.local:80; sleep 5;done"]
         securityContext:
           runAsGroup: 0
           runAsNonRoot: false
           runAsUser: 0
           privileged: true
 
+---
+
+# Generates traffic from 'curl-ns' to an unknown private range IP 10.10.10.10.
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: curl-private
+  namespace: curl-ns
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: curl
+  template:
+    metadata:
+      labels:
+        app: curl
+    spec:
+      containers:
+      - image: curlimages/curl
+        name: curl
+        command: ["sh"]
+        args: ["-c", "while true; do curl http://10.10.10.10:8080; sleep 5;done"]
+        securityContext:
+          runAsGroup: 0
+          runAsNonRoot: false
+          runAsUser: 0
+          privileged: true
 
 ---
 
+# Generates traffic from 'curl-ns' to an unknown public range IP 192.0.1.0.
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: curl-public
+  namespace: curl-ns
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: curl
+  template:
+    metadata:
+      labels:
+        app: curl
+    spec:
+      containers:
+      - image: curlimages/curl
+        name: curl
+        command: ["sh"]
+        args: ["-c", "while true; do curl http://192.0.1.0:80; sleep 5;done"]
+        securityContext:
+          runAsGroup: 0
+          runAsNonRoot: false
+          runAsUser: 0
+          privileged: true
+
+---
+
+# Generates traffic from 'curl-ns' to an IP defined in the global network set 'public-ips'.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: curl-8888
-  namespace: public-domain-curl
+  namespace: curl-ns
 spec:
   replicas: 1
   selector:
@@ -125,12 +164,12 @@ spec:
 
 ---
 
-
+# Generates traffic from 'curl-ns' to an IP defined in the global network set 'public-ips'.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: curl-208.67.222.222
-  namespace: public-domain-curl
+  namespace: curl-ns
 spec:
   replicas: 1
   selector:
@@ -154,11 +193,12 @@ spec:
 
 ---
 
+# Generates traffic from 'curl-ns' to the public domain 'www.tigera.io'.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-projectcalico-org
-  namespace: public-domain-curl
+  name: curl-calico-org
+  namespace: curl-ns
 spec:
   replicas: 1
   selector:
@@ -173,7 +213,7 @@ spec:
       - image: curlimages/curl
         name: curl
         command: ["sh"]
-        args: ["-c", "while true; do curl http://www.projectcalico.org:80; sleep 5;done"]
+        args: ["-c", "while true; do curl http://www.tigera.io:80; sleep 5;done"]
         securityContext:
           runAsGroup: 0
           runAsNonRoot: false
@@ -182,17 +222,76 @@ spec:
 
 ---
 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx
+  namespace: service-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - image: docker.io/library/nginx:latest
+        name: nginx
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx
+  namespace: curl-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - image: docker.io/library/nginx:latest
+        name: nginx
+
+---
+
 apiVersion: v1
 kind: Service
 metadata:
   name: nginx-svc
-  namespace: service-1
+  namespace: service-ns
 spec:
   ports:
   - name: nginx
-    port: 81
+    port: 80
     protocol: TCP
-    targetPort: 81
+    targetPort: 80
+  selector:
+    app: nginx
+  sessionAffinity: None
+
+--- 
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-svc
+  namespace: curl-ns
+spec:
+  ports:
+  - name: nginx
+    port: 80
+    protocol: TCP
+    targetPort: 80
   selector:
     app: nginx
   sessionAffinity: None
