Adds version number and image path for linseed component

--- a/calico-enterprise_versioned_docs/version-3.17/releases.json
+++ b/calico-enterprise_versioned_docs/version-3.17/releases.json
@@ -134,6 +134,8 @@
         "version": "v3.17.0"
       },
       "linseed": {
+        "image": "tigera/linseed",
+        "version": "v3.17.0"
       },
       "tigera-cni": {
         "image": "tigera/cni",
