[EV-3801] Re-establish connections

--- a/static/files/policy-recommendation/policy-recommendation-deployments.yaml
+++ b/static/files/policy-recommendation/policy-recommendation-deployments.yaml
@@ -23,7 +23,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-service
+  name: curl-service-curl-ns
   namespace: service-ns
 spec:
   replicas: 2
@@ -52,7 +52,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-service
+  name: curl-service-ns
   namespace: curl-ns
 spec:
   replicas: 2
@@ -81,7 +81,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-private
+  name: curl-private-ip
   namespace: curl-ns
 spec:
   replicas: 2
@@ -110,7 +110,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-public
+  name: curl-public-ip
   namespace: curl-ns
 spec:
   replicas: 2
@@ -139,7 +139,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-8888
+  name: curl-globalnetworkset-8.8.8.8
   namespace: curl-ns
 spec:
   replicas: 1
@@ -168,7 +168,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-208.67.222.222
+  name: curl-globalnetworkset-208.67.222.222
   namespace: curl-ns
 spec:
   replicas: 1
@@ -197,7 +197,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: curl-calico-org
+  name: curl-public-tigera
   namespace: curl-ns
 spec:
   replicas: 1
