Fix version bugs

--- a/calico-enterprise_versioned_docs/version-3.17/releases.json
+++ b/calico-enterprise_versioned_docs/version-3.17/releases.json
@@ -115,7 +115,7 @@
       },
       "compliance-server": {
         "image": "tigera/compliance-server",
-        "version": "3.17.1"
+        "version": "v3.17.1"
       },
       "compliance-benchmarker": {
         "image": "tigera/compliance-benchmarker",
@@ -240,7 +240,7 @@
         "version": "v3.17.0"
       },
        "policy-recommendation": {
-        "image": "policy/recommendation",
+        "image": "tigera/policy-recommendation",
         "version": "v3.17.0"
       },
       "flexvol": {
