--- a/calico-enterprise_versioned_docs/version-3.17/releases.json
+++ b/calico-enterprise_versioned_docs/version-3.17/releases.json
@@ -7,7 +7,7 @@
       "registry": "quay.io"
     },
     "calico": {
-      "minor_version": "v3.25",
+      "minor_version": "v3.26.x",
       "archive_path": "archive"
     },
     "components": {
