EV-4156 add upstream prometheus operator versions to the docs

--- a/calico-enterprise_versioned_docs/version-3.16/releases.json
+++ b/calico-enterprise_versioned_docs/version-3.16/releases.json
@@ -185,6 +185,12 @@
       "coreos-prometheus": {
         "version": "v2.32.0"
       },
+      "coreos-prometheus-operator": {
+        "version": "v0.53.1"
+      },
+      "coreos-config-reloader": {
+        "version": "v0.53.1"
+      },
       "prometheus-operator": {
         "image": "tigera/prometheus-operator",
         "version": "v3.16.3"
