--- a/calico-enterprise_versioned_docs/version-3.18/releases.json
+++ b/calico-enterprise_versioned_docs/version-3.18/releases.json
@@ -189,6 +189,12 @@
       "coreos-prometheus": {
         "version": "v2.45.0"
       },
+      "coreos-prometheus-operator": {
+        "version": "v0.62.0"
+      },
+      "coreos-config-reloader": {
+        "version": "v0.62.0"
+      },
       "prometheus-operator": {
         "image": "tigera/prometheus-operator",
         "version": "v3.18.0"
