--- a/calico-cloud_versioned_docs/version-3.17/releases.json
+++ b/calico-cloud_versioned_docs/version-3.17/releases.json
@@ -189,6 +189,12 @@
       "coreos-prometheus": {
         "version": "v2.43.1"
       },
+      "coreos-prometheus-operator": {
+        "version": "v0.62.0"
+      },
+      "coreos-config-reloader": {
+        "version": "v0.62.0"
+      },
       "prometheus-operator": {
         "image": "tigera/prometheus-operator",
         "version": "v3.17.1"
