DOCS-1720-IA-Updates-3.18

--- a/calico-cloud_versioned_docs/version-18/releases.json
+++ b/calico-cloud_versioned_docs/version-18/releases.json
@@ -254,6 +254,11 @@
         "version": "v3.18.0-1.1",
         "registry": "quay.io"
       },
+      "image-assurance": {
+        "image": "tigera/image-assurance",
+        "version": "master",
+        "registry": "quay.io"
+      },
       "csi-driver": {
         "image": "tigera/csi",
         "version": "v3.18.0-1.1",
