DOCS-1700: Adds config for CC version next previews

--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,8 @@ package = "@netlify/plugin-lighthouse"
 
 # Deploy Preview context: all deploys generated from
 # a pull/merge request will inherit these settings.
-#[context.deploy-preview]
+[context.deploy-preview]
+command = "[[ $PREVIEW_TYPE == cloudpreview ]] && echo Building deploy preview for Calico Cloud version next && bash ./scripts/cc-next-preview-config.sh || make netlify"
 
 # Here is an example of how to define context-specific
 # environment variables. Be mindful when using this
