--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@emotion/styled": "^11.9.3",
     "@jest/globals": "^29.4.1",
     "@mdx-js/react": "^1.6.22",
-    "@types/react": "^18.0.27",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "clsx": "^1.2.1",
     "framer-motion": "^4.1.17",
     "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-if": "^4.1.4",
     "react-loadable": "^5.5.0",
     "react-modal": "^3.15.1",
