--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.3",
+    "@docusaurus/tsconfig": "3.0.0",
     "@playwright/test": "^1.30.0",
     "@testing-library/react": "^12.1.5",
     "@types/jest": "^29.5.0",
@@ -62,7 +63,7 @@
     "playwright": "^1.30.0",
     "sass": "^1.54.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.4.0",
+    "typescript": "~5.2.2",
     "yaml": "^2.2.2"
   },
   "jest-junit": {
