--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@emotion/styled": "^11.9.3",
     "@jest/globals": "^29.4.1",
     "@mdx-js/react": "^1.6.22",
-    "@types/react": "^18.0.27",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "clsx": "^1.2.1",
     "framer-motion": "^4.1.17",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prism-react-renderer": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-if": "^4.1.4",
     "react-loadable": "^5.5.0",
     "react-modal": "^3.15.1",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.3",
+    "@docusaurus/tsconfig": "3.0.0",
     "@playwright/test": "^1.30.0",
     "@testing-library/react": "^12.1.5",
     "@types/jest": "^29.5.0",
@@ -61,7 +63,7 @@
     "playwright": "^1.30.0",
     "sass": "^1.54.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.4.0",
+    "typescript": "~5.2.2",
     "yaml": "^2.2.2"
   },
   "jest-junit": {
@@ -81,7 +83,7 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.0"
   },
   "resolutions": {
     "**/image-size": "file:./src/forks/image-size/"
