Add 'make start-with-vnext' command
Add 'make start-with-vnext' command that includes the 'current' version in
onlyIncludeVersions in the docusaurus config, so that one can visualize
the 'next' version of the locally rendered website (which doesn't show up
in 'make start' since this PR: https://github.com/tigera/docs/pull/1052/)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "start-container": "docusaurus start -h 0.0.0.0",
+    "start-with-vnext": "docusaurus start --config docusaurus.config.with-vnext.js",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
