Add cspell and 'make spell' command
Add cspell to check spelling on mdx/md/txt/yaml files
(https://cspell.org/docs/getting-started/)

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "unittest": "jest --coverage",
     "git-clean": "git restore --staged . && git clean -f .",
     "dir-clean": "rm -rf ./calico ./calico-enterprise ./calico-cloud ./docs/calico ./docs/calico-enterprise ./docs/calico-cloud ./src/data ./static/img/calico ./static/img/calico-enterprise ./static/img/calico-cloud ./static/json/calico-api-swagger.json ./calico_versions.json ./calico-enterprise_versions.json ./calico-cloud_versions.json && find . -regex '.*_versioned_docs/version-.*' -delete",
-    "cut": "scripts/cut-new-version.sh"
+    "cut": "scripts/cut-new-version.sh",
+    "spell": "cspell --no-progress --show-suggestions --show-context '**/*.mdx' '**/*.md' '**/*.txt' '**/*.yaml'"
   },
   "dependencies": {
     "@algolia/client-search": "^4.14.3",
@@ -53,6 +54,7 @@
     "@types/jest": "^29.5.0",
     "axios": "^1.6.0",
     "crawlee": "^3.1.4",
+    "cspell": "^8.0.0",
     "docusaurus-plugin-sass": "^0.2.2",
     "html-entities": "^2.3.3",
     "jest": "^29.5.0",
