Add unsupported word from project-words.txt as ignore regexp, update project-words.txt

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -10,3 +10,7 @@ dictionaries:
 ignorePaths:
   - 'node_modules'
   - '/project-words.txt'
+ignoreRegExpList:
+  # necessary because it's not possible to use this in project-words.txt
+  - >
+    doesn&#39;t
