Add ignore regexp for typo that shows up in license

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -14,3 +14,6 @@ ignoreRegExpList:
   # necessary because it's not possible to use this in project-words.txt
   - >
     doesn&#39;t
+  # this shows up in licenses and should not be changed
+  - >
+    Copyright 2014 Unknwon
