--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tigera-docs",
-  "version": "1.18.0",
+  "version": "v1.22.19",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
