--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@algolia/client-search": "^4.14.3",
     "@chakra-ui/icons": "1.1.1",
     "@chakra-ui/react": "1.6.10",
-    "@docusaurus/core": "^2.4.3",
-    "@docusaurus/preset-classic": "^2.4.3",
+    "@docusaurus/core": "^3.0.1",
+    "@docusaurus/preset-classic": "^3.0.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@jest/globals": "^29.4.1",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^3.0.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "clsx": "^1.2.1",
@@ -48,8 +48,9 @@
     "webpack": "^5.76.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.3",
-    "@docusaurus/tsconfig": "3.0.0",
+    "@docusaurus/module-type-aliases": "^3.0.1",
+    "@docusaurus/tsconfig": "^3.0.1",
+    "@docusaurus/types": "^3.0.1",
     "@playwright/test": "^1.30.0",
     "@testing-library/react": "^12.1.5",
     "@types/jest": "^29.5.0",
