DOCS-2045-archive-ce-3.15

--- a/netlify.toml
+++ b/netlify.toml
@@ -353,7 +353,7 @@ directory = "functions/"
 # for environment variables. Environment variables for Netlify
 # Dev should be set under [context.dev.environment] instead.
 #[dev]
-#command = "yarn start"
+#command = "yarn build"
 #port = 8888
 #publish = "dist"
 
