rm building & testing from semaphore job - just indexing now

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,5 +1,5 @@
 version: v1.0
-name: Calico / Tigera Docs Pipeline
+name: Calico / Tigera Docs Indexing Job
 
 agent:
   machine:
@@ -48,23 +48,3 @@ blocks:
           commands:
             - cache restore
             - make index
-  - name: Tests
-    task:
-      env_vars:
-        - name: NODE_ENV
-          value: test
-        - name: CI
-          value: 'true'
-        - name: DEEP_CRAWL
-          value: 'false'
-      prologue:
-        commands:
-          - checkout
-          - sem-version node 18.18.2
-          - node --version
-          - yarn --version
-      jobs:
-        - name: Crawler Tests for Docs
-          commands:
-            - cache restore
-            - make clean && make build && make test
