Test for vale action

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,13 +1,11 @@
 StylesPath = .github/styles
 
 MinAlertLevel = error
-
+Packages = Google
 Vocab = CalicoDocs
 
 [formats]
 mdx = md
 
 [*.{md,mdx}]
-BasedOnStyles = Vale
-[formats]
-mdx = md
+BasedOnStyles = Vale, Google
