Revert "docs summary page v1"
This reverts commit 94d6763a1ecb0deb153278afeaeb7e69b1fe2481.

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "dependencies": {
     "@algolia/client-search": "^4.14.3",
     "@chakra-ui/icons": "1.1.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@chakra-ui/react-types": "^2.0.6",
+    "@chakra-ui/react": "1.6.10",
     "@docusaurus/core": "^2.4.3",
     "@docusaurus/preset-classic": "^2.4.3",
     "@emotion/react": "^11.9.3",
