Changes build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -16,7 +16,7 @@ package = "@netlify/plugin-lighthouse"
 # here but we recommend using the Netlify UI for sensitive
 # values to keep them out of your source repository.
 #[context.production]
-#command = "make all"
+#command = "yarn build"
 
 #publish = "output/"
 #command = "make publish"
