DOCS-2256: Adds webhooks-processor to releases.json

--- a/calico-enterprise_versioned_docs/version-3.19-2/releases.json
+++ b/calico-enterprise_versioned_docs/version-3.19-2/releases.json
@@ -236,6 +236,10 @@
         "image": "tigera/envoy-init",
         "version": "v3.19.1"
       },
+      "webhooks-processor": {
+        "image": "tigera/webhooks-processor",
+        "version": "v3.19.1"
+      },
       "flexvol": {
         "image": "tigera/pod2daemon-flexvol",
         "version": "v3.19.1"
@@ -485,6 +489,10 @@
       },
       "envoy-init": {
         "image": "tigera/envoy-init",
+        "version": "v3.19.0-2.0"
+      },
+      "webhooks-processor": {
+        "image": "tigera/webhooks-processor",
         "version": "v3.19.0-2.0"
       },
       "flexvol": {
