Update Docusaurus to 3.5.2

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@chakra-ui/icons": "1.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/react-types": "^2.0.6",
-    "@docusaurus/core": "^2.4.3",
-    "@docusaurus/preset-classic": "^2.4.3",
+    "@docusaurus/core": "^3.5.2",
+    "@docusaurus/preset-classic": "^3.5.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@jest/globals": "^29.4.1",
@@ -49,8 +49,8 @@
     "webpack": "^5.94.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.3",
-    "@docusaurus/tsconfig": "3.0.0",
+    "@docusaurus/module-type-aliases": "^3.5.2",
+    "@docusaurus/tsconfig": "^3.5.2",
     "@playwright/test": "^1.30.0",
     "@testing-library/react": "^12.1.5",
     "@types/jest": "^29.5.0",
