--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -3,7 +3,7 @@ name: Calico / Tigera Docs Indexing Job
 
 agent:
   machine:
-    type: e1-standard-8
+    type: f1-standard-2
     os_image: ubuntu2004
 
 execution_time_limit:
