Adds test to build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@ publish = "build/"
 
 # Default build command.
 # Changed here to make build for D3 testing
-command = "make build"
+command = "make netlify"
 
 [[plugins]]
 # Installs the Lighthouse Build Plugin for all deploy contexts
